--- a/ineuron_academics_bot/config.ini
+++ b/ineuron_academics_bot/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
-SENDER_EMAIL=<>
-PASSWORD=<>
+SENDER_EMAIL=madhumantra11@gmail.com
+PASSWORD=google!10
 EMAIL_BODY=This is a config email
 EMAIL_SUBJECT=iNeuron Course Details
-SALES_TEAM_EMAIL= <>
+SALES_TEAM_EMAIL= madhumantra11@gmail.com
 SALES_TEAM_EMAIL_SUBJECT=LEAD GENERATED
